// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`fail update project chain 1`] = `
"<header>
  <a class=\\"logo\\" href=\\"\\"> Simple CI </a>
</header>
<!--0-->
<main>
  <ul class=\\"breadcrumb\\">
    <li>
      <a href=\\"\\"> Projects </a>
    </li>
    <li>
      <a href=\\"projects/1\\">Test</a>
    </li>
    <!--0-->
    <!--0-->
    <li>Test chain</li>
  </ul>
  <!--0-->
  <!--0-->
  <!--0-->
  <!--0-->
  <div class=\\"chain-info\\">
    <h3>Test chain</h3>
  </div>
  <div class=\\"project-chain-form\\">
    <form>
      <div class=\\"group\\">
        <input name=\\"name\\" type=\\"text\\" required=\\"\\"><span class=\\"highlight\\"></span><span class=\\"bar\\"></span>
        <label>Name</label>
      </div>
      <div class=\\"group\\">
        <textarea wrap=\\"off\\" style=\\"display: none\\" name=\\"command\\">echo 1</textarea>
        <div class=\\"code-flask\\">
          <div class=\\"codeflask codeflask--has-line-numbers\\">
            <textarea class=\\"codeflask__textarea codeflask__flatten\\" spellcheck=\\"false\\" autocapitalize=\\"off\\" autocomplete=\\"off\\" autocorrect=\\"off\\"></textarea><pre class=\\"codeflask__pre codeflask__flatten  language-html\\"><code class=\\"codeflask__code  language-html\\">echo 1</code></pre>
            <div class=\\"codeflask__lines\\"><span class=\\"codeflask__lines__line\\">1</span></div>
          </div>
        </div>
        <!--0--><span class=\\"highlight\\"></span><span class=\\"bar\\"></span>
        <label>Command</label>
      </div>
      <div class=\\"group\\">
        <button type=\\"submit\\"><span>Save</span></button>
      </div>
    </form>
  </div>
  <!--0-->
  <!--0-->
  <!--1-->
  <!--0-->
  <!--1-->
  <!--0-->
</main>
<footer> Sham 2018
  (v 0.0.6) </footer>
<!--1-->"
`;

exports[`fail update project chain 2`] = `
"<header>
  <a class=\\"logo\\" href=\\"\\"> Simple CI </a>
</header>
<!--0-->
<main>
  <ul class=\\"breadcrumb\\">
    <li>
      <a href=\\"\\"> Projects </a>
    </li>
    <li>
      <a href=\\"projects/1\\">Test</a>
    </li>
    <!--0-->
    <!--0-->
    <li>Test chain</li>
  </ul>
  <!--0-->
  <!--0-->
  <ul class=\\"errors-panel\\">
    <li>Update project chain fail!</li>
  </ul>
  <!--0-->
  <!--0-->
  <!--1-->
  <!--0-->
  <!--1-->
  <!--0-->
</main>
<footer> Sham 2018
  (v 0.0.6) </footer>
<!--1-->"
`;
